# scrapwell

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  dist-workspace.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  release.yml
crates/scrapwell/: Cargo.toml
crates/scrapwell-core/: Cargo.toml
crates/scrapwell-core/src/: error.rs  handler.rs  lib.rs  model.rs  path.rs
crates/scrapwell-core/src/index/: mod.rs  noop.rs  tantivy_index.rs
crates/scrapwell-core/src/service/: mod.rs
crates/scrapwell-core/src/store/: fs.rs  mod.rs
crates/scrapwell/src/: cli.rs  main.rs
docs/: architecture.md  dependencies.md  directory-structure.md  implementation-plan.md  mcp-tools.md  roadmap.md  tantivy.md
scripts/: installer.sh.template
site/: config.toml
site/content/: _index.md
site/content/docs/: _index.md
site/content/docs/architecture/: _index.md  internals.md
site/content/docs/concepts/: _index.md  data-model.md  obsidian.md
site/content/docs/configuration/: _index.md  config-reference.md
site/content/docs/getting-started/: _index.md  claude-code-setup.md  installation.md
site/content/docs/tools/: _index.md  admin-tools.md  overview.md  read-tools.md  write-tools.md
site/public/: 404.html  index.html  robots.txt  search_index.en.js  sitemap.xml
site/public/docs/: index.html
site/public/docs/architecture/: index.html
site/public/docs/architecture/internals/: index.html
site/public/docs/concepts/: index.html
site/public/docs/concepts/data-model/: index.html
site/public/docs/concepts/obsidian/: index.html
site/public/docs/configuration/: index.html
site/public/docs/configuration/config-reference/: index.html
site/public/docs/getting-started/: index.html
site/public/docs/getting-started/claude-code-setup/: index.html
site/public/docs/getting-started/installation/: index.html
site/public/docs/tools/: index.html
site/public/docs/tools/admin-tools/: index.html
site/public/docs/tools/overview/: index.html
site/public/docs/tools/read-tools/: index.html
site/public/docs/tools/write-tools/: index.html
site/static/: custom.css
site/templates/: index.html
