[package]
name = "scrapwell-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
rusqlite = { version = "0.31", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
rmcp = { version = "1.3", features = ["client"] }
tempfile = "3"
