[package]
name = "scrapwell-core"
version = "0.1.2"
edition = "2021"
description = "Core library for scrapwell MCP memory server"
repository = "https://github.com/argonism/scrapwell"
license = "MIT"

[features]
default = ["tantivy-backend"]
tantivy-backend = ["dep:tantivy"]

[dependencies]
tantivy = { version = "0.25", optional = true }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
rusqlite = { version = "0.31", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
strsim = "0.11"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
rmcp = { version = "1.3", features = ["client"] }
tempfile = "3"
