[package]
name = "scrapwell"
version = "0.1.0"
edition = "2021"
description = "MCP memory server for LLM agents"
homepage = "https://github.com/argonism/scrapwell"
repository = "https://github.com/argonism/scrapwell"
license = "MIT"

[dependencies]
anyhow = "1"
serde_json = "1"
scrapwell-core = { path = "../scrapwell-core" }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
